# cglcpp

./: CMakeLists.txt  cglresult.txt  cglsource.txt  cglsource1.txt  cglsource1x8.txt  console.h  logic.h  main.cpp  readme.md  simple.h  test.cpp
crap/: cglsource1x4.txt  cooltech.txt
include/: console.h  logic.h  window.h
